changing company name

--- a/resources/views/frontend/index.html
+++ b/resources/views/frontend/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="favicon.ico">
 
-    <title>北京证券集团有限公司</title>
+    <title>北京首通证券香港集团有限公司</title>
 
     <!-- Bootstrap core CSS -->
     <link href="dist/css/bootstrap.min.css" rel="stylesheet">
@@ -52,8 +52,8 @@
         <h3 class="text-muted">
           <img src="img/bsg_logo_500x500.png">
           <ul class="company-name">
-            <li>北京证券集团有限公司</li>
-            <li>Beijing Securities Group Limited</li>
+            <li>北京首通证券香港集团有限公司</li>
+            <li>Beijing Shoutong Securities Hong Kong Group Limited</li>
           </ul>
         </h3>
 
@@ -265,7 +265,7 @@
       <div class="row service-block">
         <div class="col-lg-4">
           <h2>交易服务</h2>
-          <p>北京证券集团有限公司一向致力为客户提供全面证券买卖服务，配合多元化交易渠道及全面交易信息，让客户全方位把握投资良机。</p>
+          <p>北京首通证券香港集团有限公司一向致力为客户提供全面证券买卖服务，配合多元化交易渠道及全面交易信息，让客户全方位把握投资良机。</p>
           <div class="img-block"><img src="img/trade-service.jpg"></div>
         </div>
         <div class="col-lg-4">
@@ -282,7 +282,7 @@
 
       <!-- Site footer -->
       <footer class="footer">
-        <p>&copy; 2016 版权属北京证券集团有限公司所有 <a href="#">免责声明</a> | <a href="#">私隐条款</a></p>
+        <p>&copy; 2016 版权属北京首通证券香港集团有限公司所有 <a href="#">免责声明</a> | <a href="#">私隐条款</a></p>
       </footer>
 
     </div> <!-- /container -->
